@@ -1,4 +1,5 @@
 0.08
+ - Update Module::Install to 1.16 version.
 
 0.07 2014-12-22T01:14:11+01:00
  - Fix LICENSE file.
